--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ScanCodeActivity"></activity>
+        <activity android:name=".ListarActivity"></activity>
+        <activity android:name=".ScanCodeActivity" />
         <activity android:name=".AdicionarMedicamento" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -20,6 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".Receiver" />
     </application>
 
 </manifest>
